--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>Socket-Handler</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Socket Handler</name>
-    <description>Socket Handler</description>
+    <description>Library to handle read/write requests and responses</description>
     <properties>
         <java.version>17</java.version>
     </properties>
