--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -68,8 +68,9 @@ jobs:
 
     - name: build
     - run: |
-         echo "Run, Build Application using script"
-         ./script/buildscript.sh
+        echo "Run, Build Application using script"
+        ./mvnw clean install
+        java -jar target/Socket-Handler-0.0.1-SNAPSHOT.jar
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
