--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>dev.jcodex</groupId>
-    <artifactId>Socket-Handler</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>sockethandler</artifactId>
+    <version>0.0.3-SNAPSHOT</version>
     <name>Socket Handler</name>
     <description>Library to handle read/write requests and responses</description>
     <properties>
@@ -57,6 +57,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <classifier>exec</classifier>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
@@ -67,5 +68,13 @@
             </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub JCodeX Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/jcodex-dev/socket-handler</url>
+        </repository>
+    </distributionManagement>
 
 </project>
